src/WarpProcessing/Native/WarpCore.cs


        [LibraryImport("WarpCore")]
        public static partial int clust_fit(nint x, int d, int n, int k, nint cent, nint label, int method);

        [LibraryImport("WarpCore")]
        public static partial int pca_fit(ref PcaInfo pca, nint ppdata, nint allow, nint pcs, nint lambda);

        [LibraryImport("WarpCore")]
        public static partial int pca_data_to_scores(ref PcaInfo pca, nint data, nint pcs, nint allow, nint scores);

        [LibraryImport("WarpCore")]
        public static partial int pca_scores_to_data(ref PcaInfo pca, nint scores, nint pcs, nint data);

        [LibraryImport("WarpCore")]
        public static partial int pcl_impute(ref ImputeInfo info, nint data, nint templ, nint valid_mask);

        [LibraryImport("WarpCore")]
        public static partial int transform_fit(ref FitTransformInfo info, int m, nint src, nint dest, ref nint ctx);

        [LibraryImport("WarpCore")]
        public static partial int transform_apply(nint ctx, int m, nint x, nint y);

        [LibraryImport("WarpCore")]
        public static partial int transform_destroy(nint ctx);


        public static string GetInfoString(WarpCoreInfoIndex wcii)
        {
            const int MaxDataLen = 1024;
            Span<byte> sb = stackalloc byte[MaxDataLen];
            int len = wcore_get_info((int)wcii, sb, MaxDataLen);
            return Encoding.UTF8.GetString(sb.Slice(0, len));
        }

        public static WarpCoreOptimizationPath LimitOptimizationPath(WarpCoreOptimizationPath op = WarpCoreOptimizationPath.Maximum)
        {
            return (WarpCoreOptimizationPath)set_optpath((int)op);
        }
    }
}
